--- a/deploy/rolebinding.yaml
+++ b/deploy/rolebinding.yaml
@@ -1,11 +1,11 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: vault-operator
+  name: linkerd2-operator
 subjects:
 - kind: ServiceAccount
-  name: vault-operator
+  name: linkerd2-operator
 roleRef:
   kind: Role
-  name: vault-operator
+  name: linkerd2-operator
   apiGroup: rbac.authorization.k8s.io
